# epsc-digital-bank

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: dependencies.py  schemas.py
app/banking/application/exceptions/: account_cant_deposit_funds_exception.py  invalid_deposit_amount_exception.py  invalid_transfer_amount_exception.py  same_wallet_transfer_exception.py
app/banking/domain/entities/: ledger_entry.py  transaction.py  wallet.py
app/banking/domain/enums/: ledger_entry_type.py  transaction_status.py  transaction_type.py
app/banking/domain/exceptions/: currency_mismatch_exception.py  insufficient_funds_exception.py  invalid_money_amount_exception.py
app/banking/domain/repositories/: ledger_entry_repository.py  transaction_repository.py  wallet_repository.py
app/banking/domain/value_objects/: money.py
app/banking/infrastructure/: router.py
app/banking/infrastructure/repositories/: ledger_entry_model.py  ledger_entry_repository_impl.py  transaction_model.py  transaction_repository_impl.py  wallet_model.py  wallet_repository_impl.py
app/identity/application/exceptions/: account_not_found_exception.py  (+3 more)
app/identity/infrastructure/: database.py  router.py
app/shared/application/: unit_of_work.py
app/shared/infrastructure/: sqlalchemy_unit_of_work.py
database/: env.py
database/migrations/: d883687b569a_create_initial_schema.py
docs/adr/: ADR-001-monolito-modular.md
tests/: test_health_check.py
tests/api/: test_app.py
(+40 files in other folders)
