[project]
name = "epsc-digital-bank"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "taskipy>=1.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
  "-ra",
  "-q",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-fail-under=60",
]

[tool.taskipy.tasks]
test = "pytest"
cov = "pytest --cov-report=xml"
lint = "ruff check ."
format = "ruff format ."
check = "ruff check . && mypy . && pytest"